# Benchmark-v700

./: .gitmodules
.github/workflows/: cpp-ci.yml
2024-huawei-v700/12.12/: report.txt
cpp/: .clang-tidy  .gitignore  CMakeLists.txt  README.md  example.json  flake.nix
cpp/cmake/: Dependencies.cmake
cpp/common/: gstats.h  server_clock.h  tree_stats.h
cpp/ds/aksenov_splaylist_64/: adapter.h
cpp/ds/ms-queue-lf/: queue.h
cpp/ds/treiber_stack/: adapter.h  stack.h
cpp/ds/treiber_stack_fc/: stack.h
cpp/ds/verlib_arttree/: adapter.h  set.h
cpp/ds/verlib_arttree2/: adapter.h
cpp/ds/verlib_blockleaftree/: adapter.h
cpp/ds/verlib_btree/: adapter.h  set.h
cpp/ds/verlib_dlist/: adapter.h  ordered_map.h
cpp/ds/verlib_hash/: adapter.h
cpp/ds/verlib_hashblock/: adapter.h  set.h
cpp/ds/verlib_leaftree/: adapter.h
cpp/ds/verlib_list/: adapter.h
cpp/ds/verlib_list_onelock/: adapter.h  set.h
cpp/ds/verlib_oldarttree/: adapter.h
cpp/microbench/: CMakeLists.txt  coroutine_adapter.h  coroutine_manager.h  data_structure.h  define_global_statistics.h  experiment-run.h  global_types.h  globals_extern.h  globals_t.h  globals_t_impl.h  main.cpp  mainv2.cpp  parse_argument.h  statistics.h
cpp/microbench/json_example/: creakers_and_wave_example.json  example.json  generalized_example.json  json_example.cpp  result.json  temp_oper_example.json  temp_skewed_example.json
cpp/microbench/tests/adapters/: main.cpp
cpp/microbench/workloads/: bench_parameters.h  parameters.h
cpp/microbench/workloads/args_generators/: args_generator.h  args_generator_builder.h  args_generator_json_convector.h
cpp/microbench/workloads/args_generators/impls/: creakers_and_wave_args_generator.h  creakers_and_wave_args_generator_builder.h  creakers_and_wave_prefill_args_generator.h  default_args_generator.h  default_args_generator_builder.h  generalized_args_generator.h  generalized_args_generator_builder.h  generalized_args_generator_impl.h  leafs_handshake_args_generator.h  leafs_handshake_args_generator_builder.h  null_args_generator.h  null_args_generator_builder.h  range_query_args_generator.h  range_query_args_generator_builder.h  skewed_insert_args_generator.h  skewed_insert_args_generator_builder.h  skewed_sets_args_generator.h  skewed_sets_args_generator_builder.h  temporary_skewed_args_generator.h  temporary_skewed_args_generator_builder.h
cpp/microbench/workloads/data_maps/: data_map.h  data_map_builder.h  data_map_converter.h  data_map_json_convector.h  data_map_json_converter.h  int_data_map.h  string_data_map.h
cpp/microbench/workloads/data_maps/builders/: array_data_map_builder.h  id_data_map_builder.h
cpp/microbench/workloads/data_maps/impls/: array_data_map.h  id_data_map.h
cpp/microbench/workloads/data_maps/integer_data_maps/: index_data_map.h  int_data_map.h
cpp/microbench/workloads/distributions/: distribution.h  distribution_builder.h  distribution_json_convector.h
cpp/microbench/workloads/distributions/builders/: skewed_uniform_distribution_builder.h  uniform_distribution_builder.h  zipfian_distribution_builder.h
cpp/microbench/workloads/distributions/impls/: skewed_uniform_distribution.h  uniform_distribution.h  zipf_distribution.h
cpp/microbench/workloads/index_maps/: index_map.h  index_map_builder.h  index_map_converter.h  index_map_json_convector.h
cpp/microbench/workloads/index_maps/builders/: array_index_map_builder.h  id_index_map_builder.h
cpp/microbench/workloads/index_maps/impls/: array_index_map.h  id_index_map.h
cpp/microbench/workloads/key_converters/: key_converter.h
cpp/microbench/workloads/stop_condition/: stop_condition.h  stop_condition_json_convector.h
cpp/microbench/workloads/stop_condition/impls/: operation_counter.h  timer.h
cpp/microbench/workloads/thread_loops/: ratio_thread_loop_parameters.h  thread_loop.h  thread_loop_builder.h  thread_loop_impl.h  thread_loop_json_convector.h
cpp/microbench/workloads/thread_loops/default/: map_thread_loop.h  normal_thread_loop.h  ratio_thread_loop_parameters.h  thread_loop.h  thread_loop_impl.h  thread_loop_json_convector.h
cpp/microbench/workloads/thread_loops/default/impls/: default_thread_loop.h  prefill_insert_thread_loop.h  temporary_operations_thread_loop.h
cpp/microbench/workloads/thread_loops/impls/: default_thread_loop.h  prefill_insert_thread_loop.h  temporary_operations_thread_loop.h
cpp/microbench/workloads/thread_loops/map/: map_thread_loop.h  thread_loop_impl.h
cpp/microbench/workloads/thread_loops/map/impls/: default_thread_loop.h  prefill_insert_thread_loop.h  temporary_operations_thread_loop.h
cpp/microbench/workloads/thread_loops/queue/: queue_thread_loop.h  thread_loop.h  thread_loop_impl.h
cpp/microbench/workloads/thread_loops/queue/impls/: prefill_insert_thread_loop.h  stack_thread_loop.h
cpp/parlay/flock/: lf_log.h  tagged.h
cpp/plotting/: README.md  README_NEW.md  argument_reader.py  plotter.py  plotter_example.json  requirements.txt  requirements_old.txt  run_tests.py  test.json  test_requirements.txt
cpp/plotting/tests/tests_break/: missing_fields.json  missing_folder.json  missing_input.json  missing_key_title.json  missing_keys_title.json
cpp/plotting/tests/tests_complete/: full_config.json
cpp/plotting/tests/tests_no_run/: plot_config.json
cpp/tests/: dummy-test.cpp
java/: sources.txt
java/src/contention/abstractions/: CompositionalMap.java  DataStructure.java
java/src/contention/benchmark/exceptions/: FileBasedDataMapException.java
java/src/contention/benchmark/json/: JsonExample.java
java/src/contention/benchmark/statistic/: BenchStatistic.java  ThreadStatistic.java
java/src/skiplists/lockfree/: ConcurrentSkipListMapAdapter.java
java/src/trees/lockbased/: LockBasedFriendlyTreeMap.java  LockBasedStanfordTreeMap.java  LockBasedStanfordTreeMapSplay.java
(+37 files in other folders)
